# Sunset

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  new_source.bat  project_config.json  tracy_frontend.bat
engine/: CMakeLists.txt  new_source.bat
engine/assets/: container.fbx  drone.fbx  lost_empire-Alpha.sun  lost_empire-RGB.sun  lost_empire-RGBA.sun  monkey_flat.sun  monkey_smooth.sun
engine/examples/demo/: application.cpp
engine/scripts/: build.ps1  new_project.ps1  new_source.ps1
engine/shaders/: basic.comp  basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  basic_colored.frag  basic_colored.frag.spv  basic_colored.vert  basic_colored.vert.spv  default_lit.frag  default_lit.frag.spv  default_mesh.vert  default_mesh.vert.spv
engine/shaders/common/: basic.comp  camera_motion_vectors.comp  common.inc  csm.vert  cull.comp  depth_only.vert  fullscreen.frag  fullscreen.vert  hzb_reduce.comp  lighting_common.inc  pbr_common.inc  postprocess_common.inc  skybox.frag  skybox.vert  skydome.frag  skydome.vert
engine/shaders/debug/: debug_bounds.frag  debug_bounds.vert  debug_bounds_deferred.frag  debug_primitive.vert  debug_primitive_deferred.frag
engine/shaders/deferred/: deferred_gbuffer_base.frag  deferred_lit.frag  deferred_lit_blinnphong.frag  deferred_lit_standard.frag  deferred_mesh.vert
engine/shaders/effects/: bloom_downsample.comp  bloom_resolve.frag  bloom_upsample.comp  box_blur.comp  fxaa.comp  ssao.comp  ssao_blur.comp  ssr.comp  ssr_resolve.frag  taa.comp
engine/shaders/forward/: default_lit.frag  default_mesh.vert  forward_lit.frag  forward_mesh.vert
engine/shaders/tools/: brdf_lut.frag  environment_irradiance.frag  environment_prefilter.frag  environment_prefilter.vert  equirect_to_cubemap.frag  equirect_to_cubemap.vert
engine/src/: application.cpp  application.h  main.cpp
engine/src/core/: common.h  data_globals.cpp  data_globals.h  delegate.h  minimal.h  simulation_core.cpp  simulation_core.h  simulation_layer.cpp  simulation_layer.h  subsystem.cpp  subsystem.h
engine/src/core/ecs/: component.cpp  component.h  entity.cpp  entity.h
engine/src/core/ecs/components/: body_component.cpp  body_component.h  camera_control_component.cpp  camera_control_component.h  light_component.cpp  light_component.h  mesh_component.cpp  mesh_component.h  transform_component.cpp  transform_component.h
engine/src/core/layers/: editor_gui.cpp  editor_gui.h  scene.cpp  scene.h
engine/src/core/subsystems/: camera_control_processor.cpp  camera_control_processor.h  camera_input_controller.cpp  camera_input_controller.h  light_processor.cpp  light_processor.h  physics_scene_processor.cpp  physics_scene_processor.h  scene_lighting_processor.cpp  scene_lighting_processor.h  static_mesh_processor.cpp  static_mesh_processor.h  transform_processor.cpp  transform_processor.h
engine/src/graphics/: asset_pool.cpp  asset_pool.h  barrier_batcher.cpp  barrier_batcher.h  command_queue.cpp  command_queue.h  command_queue_types.h  debug_draw_helpers.cpp  debug_draw_helpers.h  descriptor.cpp  descriptor.h  descriptor_types.h  gpu_shared_data_types.h  graphics_context.cpp  graphics_context.h  light.cpp  light.h  mesh_render_task.cpp  mesh_render_task.h  mesh_task_queue.cpp  mesh_task_queue.h  pipeline_state.cpp  pipeline_state.h  pipeline_types.h  push_constants.cpp  push_constants.h  render_graph.cpp  render_graph.h  render_pass.cpp  render_pass.h  render_pass_types.h  render_queue.cpp  render_queue.h  render_task.cpp  render_task.h  renderer.cpp  renderer.h  renderer_types.h  resource_state.cpp  resource_state.h  (+6 more)
engine/src/graphics/api/vulkan/: vk_barrier_batcher.cpp  vk_barrier_batcher.h  vk_buffer.cpp  vk_buffer.h  vk_command_queue.cpp  vk_command_queue.h  vk_context.cpp  vk_context.h  vk_descriptor.cpp  vk_descriptor.h  vk_framebuffer.cpp  (+16 more)
engine/src/graphics/resource/: buffer.cpp  buffer.h  buffer_types.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  image_types.h  material.cpp  material.h  mesh.cpp  mesh.h  resource_cache.h  shader.cpp  shader.h  shader_pipeline_layout.cpp  shader_pipeline_layout.h  shader_types.h  swapchain.cpp  swapchain.h
engine/src/graphics/strategies/: deferred_shading.cpp  deferred_shading.h  forward_shading.cpp  forward_shading.h
engine/src/input/: input_context.cpp  input_context.h  input_processor.cpp  input_processor.h  input_provider.cpp  input_provider.h  input_types.h
engine/src/job_system/: job_scheduler.cpp  job_scheduler.h  thread_pool.cpp  thread_pool.h
engine/src/memory/allocators/: pool_allocator.cpp  pool_allocator.h  stack_allocator.cpp  stack_allocator.h
engine/src/memory/collections/: bit_vector.cpp  bit_vector.h  free_list_array.h
engine/src/physics/: body.cpp  body.h  physics.cpp  physics.h  physics_context.cpp  physics_context.h  physics_types.h
engine/src/utility/: cvar.cpp  cvar.h  execution_queue.cpp  execution_queue.h  maths.cpp  maths.h  strings.cpp  strings.h
engine/src/utility/gui/: gui_core.cpp  gui_core.h
engine/src/utility/pattern/: singleton.h
engine/src/window/: window.cpp  window.h
engine/tests/: CMakeLists.txt
engine/tests/benchmarks/: main.cpp
engine/tests/unit/: main.cpp
engine/tools/: CMakeLists.txt
engine/tools/apps/: CMakeLists.txt
engine/tools/apps/cooker/: cooker.cpp  cooker.h  main.cpp
engine/tools/apps/equirectangular_map_tools/: equirect_tools.cpp  equirect_tools.h  main.cpp
engine/tools/asset_serializer/: image_serializer.cpp  mesh_serializer.cpp  mesh_serializer.h  serializer.cpp  serializer.h  shader_serializer.cpp  shader_serializer.h
engine/tools/cooker/: cooker.cpp  cooker.h  main.cpp
engine/tools/libs/: CMakeLists.txt
engine/tools/libs/asset_serializer/: image_serializer.cpp  image_serializer.h  mesh_serializer.cpp  mesh_serializer.h  shader_serializer.h
examples/: CMakeLists.txt  new_project_source.bat
examples/demo/: application.cpp  application.h
examples/demo/game/: brick_controller.cpp  brick_controller.h
examples/demo/player/: ball_controller.cpp  ball_controller.h  paddle_controller.cpp  paddle_controller.h
(+9 files in other folders)
